Several fixes & polish
 - Fixed header field text colour in edit mode
 - Fixed edit mode toggle frequently swallowing click events
 - Moved added header buttons to before kebab menu
 - Switched kebab menu to spawn a context menu instead of built-in behaviour
 - Fixed container sheet first render not showing a tab
 - Fixed item control colours in dark mode
 - Fixed vertical centring on filder controls
 - Fixed quantity field text colour
 - Fixed quantity field missing increment and decrement controls
 - Fixed .window-content spacing regression
 - Made the starting equipment cog control smaller
 - Removed breakpoints from container sheet encumbrance metre
 - Fixed encumbrance metre label colour in light mode
 - Renamed .interface-only to .always-interactive
 - Added .always-interactive class to currency and quantity on container sheet
 - Fixed level badge colour
 - Fixed effects tab missing from several item types
 - Fixed remove craft button not responding

--- a/less/v2/forms.less
+++ b/less/v2/forms.less
@@ -412,7 +412,8 @@
   }
 
   :is(.form-group, fieldset) :is(select, input):not([type="range"]) {
-    color: var(--color-text-dark-primary);
+    --input-text-color: var(--color-text-dark-primary);
+    color: var(--input-text-color);
     border: 1px solid var(--input-border-color);
     font-size: var(--font-size-11);
   }
@@ -629,6 +630,8 @@
 
   fieldset { padding: revert; }
   .hint { line-height: 16px; }
+
+  :is(select, input):not([type="range"]) { --input-text-color: var(--color-text-dark-primary); }
 
   button:not(.icon, .fa-solid, .fas) {
     height: unset;
