--- a/less/v2/items.less
+++ b/less/v2/items.less
@@ -432,6 +432,7 @@
         box-shadow: 0 0 6px var(--dnd5e-shadow-45);
         width: unset;
 
+        .breakpoint { display: none; }
         .meter { border-radius: 3px; }
       }
     }
@@ -518,6 +519,8 @@
       margin-inline: 4px;
       font-weight: bold;
     }
+
+    legend .control-button { font-size: var(--font-size-11); }
   }
 
   /* Activities */
